Fix background position on Firefox Lite /whatsnew page (#7991) (#8012)

--- a/media/css/firefox/whatsnew/whatsnew-lite.scss
+++ b/media/css/firefox/whatsnew/whatsnew-lite.scss
@@ -124,6 +124,7 @@
 
     @media #{$mq-xl} {
         background-size: 2400px auto;
+        background-position: top -95px center;
     }
 }
 
